# cpp-course

./: .gitignore  README.md  Revisao.ipynb
01_From_C_to_Cpp/: 01_C_to_Cpp_Workflow.ipynb  02_Libraries_and_Dependencies.ipynb  03_Practice.ipynb  04_VSCode_Troubleshooting.ipynb  05_Summary.ipynb  practice01.ipynb
01_From_C_to_Cpp/01_project/: CMakeLists.txt
01_From_C_to_Cpp/01_project/include/: simple_math.hpp
01_From_C_to_Cpp/01_project/src/: main.cpp  simple_math.cpp
01_From_C_to_Cpp/calculator_project/: CMakePresets.json
01_From_C_to_Cpp/practice/: CMakeLists.txt  CMakePresets.json  config.json
01_From_C_to_Cpp/practice/include/: config_loader.hpp
01_From_C_to_Cpp/practice/src/: config_loader.cpp
01_From_C_to_Cpp/practice01/src/: main.cpp
02_Classes_and_Objects/: 01_Structs_vs_Classes.ipynb  02_RAII_and_SmartPointers.ipynb  03_Data_Management.ipynb
02_Classes_and_Objects/pratice01/: CMakeLists.txt  CMakePresets.json
02_Classes_and_Objects/pratice01/src/: utils.cpp
02_Imperative_vs_OOP_vs_Functional/: 01_The_Hybrid_Language.ipynb
02_Memory_and_Ownership/: 01_Namespaces_and_Scopes.ipynb  02_Structs_Classes_and_Invariants.ipynb  03_References_vs_Pointers.ipynb  04_RAII_and_Smart_Pointers.ipynb  practice.ipynb
03_Modern_Control_Flow/: 01_Function_Templates.ipynb  02_Class_Templates.ipynb  03_Template_Specialization.ipynb  practice.ipynb
04_Classes_and_Objects/pratice01/include/: utils.hpp
04_Classes_and_Objects/pratice01/src/: sensor.cpp
04_STL_Containers_and_Strings/: 00_Booleans_and_Types.ipynb  01_Strings_and_Views.ipynb  02_Vectors_and_Arrays.ipynb  03_Maps_and_Sets.ipynb  04_Stacks_Queues_Lists.ipynb  05_Enums_and_Strong_Type.ipynb  practice.ipynb
05_Modern_Functions/: 01_Overloading_and_Defaults.ipynb  02_Lambdas_and_Closures.ipynb  03_Std_Function_and_Callbacks.ipynb  practice.ipynb
06_STL_Algorithms/: 01_No_More_Raw_Loops.ipynb  02_Sorting_and_Searching.ipynb  03_Transform_and_Accumulate.ipynb  practice.ipynb
07_Advanced_OOP/: pratice01.ipynb
07_Advanced_OOP/pratice01/: mission_config.json
07_Advanced_OOP/pratice01/include/: sensor.hpp
07_Advanced_OOP/pratice01/src/: main.cpp
08_File_IO_and_Data_Persistence/: 00_SQLite.ipynb
08_File_IO_and_Data_Persistence/00_SQLite3_Project/: CMakeLists.txt  CMakePresets.json  gym.db  main.cpp
09_FTXUI/: FTXUI.ipynb
09_FTXUI/00_FTXUI_Project/: CMakeLists.txt  CMakePresets.json  main.cpp
09_Project/: CMakePresets.json  sqlite_walkthrough.ipynb
09_Project/include/: Database.hpp  Exercise.hpp
09_Project/src/: CheckIn.cpp  Database.cpp  Member.cpp  WorkoutPlan.cpp  main.cpp
10_Project/: CMakeLists.txt
10_Project/diagrams/: database.dbml
10_Project/include/: CheckIn.hpp  Member.hpp  Payment.hpp  WorkoutPlan.hpp
10_Project/src/: Database.cpp  Exercise.cpp  Payment.cpp
